# CodigoGerado

AltovaUmodel/: GarageController.cpp  final_garage_generated.ump
EnterpriseArchitect/: ConsoleManager.cpp  ConsoleManager.h  EventProxy.cpp  EventProxy.h  Garage Controller.cpp  Garage Controller.h  Garage State Machine.cpp  Garage State Machine.h  SimulationManager.cpp  SimulationManager.h  StmCommonForwardDeclaration.h
VisualParadigm/: CMakeLists.txt  Garage_Controller.cpp  Garage_Controller.h  Garage_Controller.sm  Garage_ControllerSample.cpp  Garage_Controller_sm.cpp  Garage_Controller_sm.h  statemap.h
